2001-08-15  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* texi/gnus-ja.texi (Browsing the Web): Fix typo.

2001-08-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 05.

2001-08-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-art.el (gnus-request-article-this-buffer): Insert an
	article into `gnus-original-article-buffer' instead of
	`gnus-article-buffer'.

2001-07-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-sum.el (gnus-select-newsgroup): Don't examine cached
	articles with `gnus-cache-articles-in-group' even if the current
	group is not a virtual group (see ChangeLog.1 1999-03-02).

2001-07-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 04.

	* lisp/nnmh.el (nnmh-retrieve-parsed-headers): Abolished.

	* lisp/gnus-sum.el (gnus-get-newsgroup-headers-xover): Don't use
	`gnus-retrieve-parsed-headers'.
	(gnus-fetch-headers): Ditto.

	* lisp/gnus-int.el (gnus-retrieve-parsed-headers): Abolished.

	* lisp/gnus-cache.el (gnus-cache-braid-headers): Abolished.
	(gnus-cache-retrieve-parsed-headers): Abolished.

2001-07-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/nnshimbun.el (nnshimbun-request-expire-articles): Bind
	`nnmail-expiry-wait-function' to nil if the group's parameter
	`expiry-wait' is specified by the user or the shimbun's default
	value is provided.

2001-07-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-msg.el (gnus-message-make-user-agent): New
	implementation.

2001-07-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 03.

	* lisp/nntp.el (nntp-request-newgroups): Use UTC date for
	NEWGROUPS command.

	* lisp/gnus-start.el (gnus-find-new-newsgroups): Use
	`message-make-date' instead of `current-time-string'.
	(gnus-ask-server-for-new-groups): Ditto.
	(gnus-check-first-time-used): Ditto.

2001-07-12  Katsumi Yamaoka <yamaoka@jpl.org>
